--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 @font-face {
-  font-family: 'S-CoreDream-3Light';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+  font-family: "S-CoreDream-3Light";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'S-CoreDream-6Bold';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
+  font-family: "S-CoreDream-6Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 .container {
+  position: relative;
   margin: auto;
   display: grid;
   grid-template-columns: 250px 250px;
   grid-template-rows: 50px 60px 1fr 100px;
   width: 500px;
   height: 500px;
-  background: #19202C url('/images/logo512.png') no-repeat center center / cover;
+  background: #19202c url("/images/logo512.png") no-repeat center center / cover;
   border-radius: 5px;
 }
 .input-wrap label {
@@ -77,7 +80,8 @@
   width: 150px;
   margin: auto;
   padding: 12px 24px;
-  font-size: 18px;
+  font-family: "S-CoreDream-3Light", sans-serif;
+  font-size: 16px;
   text-align: center;
   color: black;
   background-color: chartreuse;
@@ -94,7 +98,7 @@
 }
 .btn.btn-dark {
   color: white;
-  background-color: #19202C;
+  background-color: #19202c;
 }
 input[type="date"] {
   -webkit-appearance: none;
@@ -113,15 +117,39 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: transparent;
   cursor: pointer;
 }
+.container div.input-wrap input::-webkit-input-placeholder {
+  font-size: 14px;
+}
+.container div.input-wrap input::-moz-placeholder {
+  font-size: 14px;
+}
+.container div.input-wrap input:-ms-input-placeholder {
+  font-size: 14px;
+}
+.container div.input-wrap input::-ms-input-placeholder {
+  font-size: 14px;
+}
 .container div.input-wrap input::placeholder {
   font-size: 14px;
+}
+.container div.input-wrap input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.container div.input-wrap input:focus::-moz-placeholder {
+  color: transparent;
+}
+.container div.input-wrap input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+.container div.input-wrap input:focus::-ms-input-placeholder {
+  color: transparent;
 }
 .container div.input-wrap input:focus::placeholder {
   color: transparent;
 }
 .container div.input-wrap input {
   display: inline-block;
-  font-family: 'S-CoreDream-6Bold';
+  font-family: "S-CoreDream-6Bold", sans-serif;
   font-size: 20px;
   color: #fff;
   text-align: center;
@@ -133,9 +161,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   outline: none;
+  z-index: 1;
+}
+.container div.input-wrap input#url,
+.container div.input-wrap input#city,
+.container div.input-wrap input#country {
+  text-align: right;
+  padding-right: 1rem;
 }
 #country {
-  font-family: 'S-CoreDream-3Light';
+  font-family: "S-CoreDream-3Light", sans-serif;
 }
 .clearBtn {
   margin-left: -9px;
@@ -147,6 +182,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  z-index: 2;
 }
 .btn-wrap {
   width: 500px;
@@ -166,16 +202,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #19202C;
+  color: #19202c;
   border-bottom: 1px solid rgba(25, 32, 44, 0.7);
   border-bottom-right-radius: 23px;
 }
 .result-wrap #download a p {
-  font-family: 'S-CoreDream-6Bold';
+  font-family: "S-CoreDream-6Bold", sans-serif;
   margin: 0;
 }
 .result-wrap #download a p span {
-  font-family: 'S-CoreDream-3Light';
+  font-family: "S-CoreDream-3Light", sans-serif;
   font-size: 12px;
   color: grey;
   margin-right: 20px;
@@ -199,8 +235,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .weather-icon-wrap li {
   list-style: none;
   width: 7%;
-  cursor: pointer;
-  -webkit-transition: all 0.5s; /* Safari */
+  cursor: pointer; /* Safari */
   transition: all 0.5s;
 }
 .weather-icon-wrap li svg {
@@ -212,3 +247,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   fill: chartreuse;
   scale: 1.2;
 }
+#selectedImage {
+  grid-row: 1/3;
+  grid-column: 1/5;
+  position: absolute;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+/* #selectedImage img {
+  position: relative;
+  width: 100%;
+  margin: auto;
+} */
