--- a/common.css
+++ b/common.css
@@ -13,13 +13,18 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .gnb {
+  flex: 1 0 100px;
   width: 100%;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+}
+
+.main-container {
+  flex: 1 0 calc(100vh - 370px);
 }
 
 .gnb-wrap {
@@ -85,6 +90,7 @@ body {
 }
 #plus-font,
 #typo-font {
+  width: 200px;
   color: var(--blue);
   font-size: 8px;
   position: absolute;
@@ -128,8 +134,9 @@ body {
 }
 
 footer {
+  flex: 1 0 80px;
   width: 100%;
-  height: 80px;
+  margin-top: 100px;
   font-size: 13px;
   display: flex;
   justify-content: center;
