--- a/temp.css
+++ b/temp.css
@@ -25,15 +25,24 @@
   justify-content: space-between;
 }
 .item-title {
-  font-size: 18px;
-  /* width: 120px; */
+  font-size: 32px;
+  line-height: 120%;
+  font-weight: 100;
+  color: #999;
+  width: 150px;
+  border-top: 1px solid #0F8EFF;
+}
+.item-title span {
+  font-size: 16px;
+  font-weight: 600;
+  color: #0F8EFF;
 }
 .temp-result {
   width: 498px;
   height: 498px;
   background-color: #f7f7f7;
   border-radius: 5px;
-  border: 1px dashed #d9d9d9;
+  border: 1px dashed #0F8EFF;
 }
 .temp-image {
   position: relative;
