--- a/temp.css
+++ b/temp.css
@@ -25,7 +25,7 @@
   justify-content: space-between;
 }
 .item-title {
-  font-size: 32px;
+  font-size: 24px;
   line-height: 120%;
   font-weight: 100;
   color: #999;
@@ -36,6 +36,9 @@
   font-size: 16px;
   font-weight: 600;
   color: #0F8EFF;
+}
+.item-title h2 {
+  margin-top: 20px;
 }
 .temp-result {
   width: 498px;
