--- a/common.css
+++ b/common.css
@@ -143,3 +143,38 @@ footer {
   align-items: center;
   background-color: #f4f4f4;
 }
+
+.item-title {
+  height: 500px;
+  font-size: 24px;
+  line-height: 120%;
+  font-weight: 100;
+  color: #999;
+  width: 150px;
+  border-top: 1px solid #0F8EFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.item-title span {
+  font-size: 16px;
+  font-weight: 600;
+  color: #0F8EFF;
+}
+.item-title h2 {
+  flex: 1;
+  margin-top: 20px;
+}
+.sample {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.sample p {
+  font-size: 13px;
+  color: var(--blue);
+  margin-bottom: 10px;
+}
+.sample img {
+  border-radius: 5px;
+}
