--- a/temp.css
+++ b/temp.css
@@ -24,22 +24,7 @@
   display: flex;
   justify-content: space-between;
 }
-.item-title {
-  font-size: 24px;
-  line-height: 120%;
-  font-weight: 100;
-  color: #999;
-  width: 150px;
-  border-top: 1px solid #0F8EFF;
-}
-.item-title span {
-  font-size: 16px;
-  font-weight: 600;
-  color: #0F8EFF;
-}
-.item-title h2 {
-  margin-top: 20px;
-}
+
 .temp-result {
   width: 498px;
   height: 498px;
@@ -112,11 +97,13 @@
 .input-wrap.file-wrap .btn,
 .btn {
   display: block;
-  width: 150px;
+  width: 120px;
+  height: 40px;
+  line-height: 40px;
   margin: auto;
-  padding: 12px 24px;
+  padding: 0 16px;
   font-family: "S-CoreDream-3Light", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   color: white;
   background-color: var(--text-b);
@@ -153,19 +140,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
 .container div.input-wrap input::-webkit-input-placeholder {
-  font-size: 14px;
+  font-size: 13px;
 }
 .container div.input-wrap input::-moz-placeholder {
-  font-size: 14px;
+  font-size: 13px;
 }
 .container div.input-wrap input:-ms-input-placeholder {
-  font-size: 14px;
+  font-size: 13px;
 }
 .container div.input-wrap input::-ms-input-placeholder {
-  font-size: 14px;
+  font-size: 13px;
 }
 .container div.input-wrap input::placeholder {
-  font-size: 14px;
+  font-size: 13px;
 }
 .container div.input-wrap input:focus::-webkit-input-placeholder {
   color: transparent;
@@ -228,11 +215,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin: auto;
   text-align: center;
 }
+#imageContainer i {
+  display: block;
+  width: 500px;
+  height: 500px;
+  background: url(./images/output-bg.svg) no-repeat center;
+}
 #imageContainer canvas {
   width: 100%;
 }
 .result-wrap #download a {
-  margin: 10px auto;
+  margin: 17px auto;
   text-decoration: none;
   display: flex;
   justify-content: space-between;
@@ -277,6 +270,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 100%;
   height: 100%;
   fill: white;
+  filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.4));
 }
 .weather-icon-wrap li:hover svg {
   fill: var(--text-b);
