--- a/common.css
+++ b/common.css
@@ -1,6 +1,12 @@
 @import "reset.css";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css");
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arima:wght@300;400;700&family=Arizonia&family=Black+Han+Sans&family=Black+Ops+One&family=Blaka+Hollow&family=Bungee&family=Bungee+Shade&family=Carter+One&family=Cinzel+Decorative:wght@400;700&family=Creepster&family=DM+Serif+Display&family=DM+Serif+Text&family=EB+Garamond:wght@400;700&family=Fredericka+the+Great&family=Graduate&family=Gruppo&family=Hammersmith+One&family=Italianno&family=Kelly+Slab&family=Kodchasan:wght@300;400;700&family=Libre+Baskerville:wght@400;700&family=Limelight&family=Lobster+Two:wght@400;700&family=Monoton&family=Montserrat+Alternates:wght@300;400;700&family=Montserrat:wght@300;400;700&family=Nixie+One&family=Oleo+Script&family=Oranienbaum&family=Oswald:wght@300;400;700&family=Padyakke+Expanded+One&family=Pirata+One&family=Poiret+One&family=Press+Start+2P&family=Quicksand:wght@300;400;700&family=Rampart+One&family=Roboto:wght@300;400;700&family=Rubik+Gemstones&family=Rubik+Vinyl&family=Sen:wght@400;700&family=Tenor+Sans&family=Tilt+Prism&family=Yesteryear&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arima:wght@300;400;700&family=Arizonia&family=Black+Han+Sans&family=Black+Ops+One&family=Blaka+Hollow&family=Bodoni+Moda:ital,opsz@1,6..96&family=Bungee&family=Bungee+Shade&family=Carter+One&family=Cinzel+Decorative:wght@400;700&family=Creepster&family=DM+Serif+Display&family=DM+Serif+Text&family=EB+Garamond:wght@400;700&family=Fredericka+the+Great&family=Graduate&family=Gruppo&family=Hammersmith+One&family=Italianno&family=Kelly+Slab&family=Kodchasan:wght@300;400;700&family=Libre+Baskerville:wght@400;700&family=Limelight&family=Lobster+Two:wght@400;700&family=Monoton&family=Montserrat+Alternates:wght@300;400;700&family=Montserrat:wght@300;400;700&family=Nixie+One&family=Oleo+Script&family=Oranienbaum&family=Oswald:wght@300;400;700&family=Padyakke+Expanded+One&family=Pirata+One&family=Poiret+One&family=Press+Start+2P&family=Quicksand:wght@300;400;700&family=Rampart+One&family=Roboto:wght@300;400;700&family=Rubik+Gemstones&family=Rubik+Vinyl&family=Sen:wght@400;700&family=Tenor+Sans&family=Tilt+Prism&family=Waterfall&family=Yesteryear&display=swap');
+
+:root {
+  --logo-h: 65px;
+  --logo-bp: -4px;
+  --blue: #0F8EFF;
+}
 
 body {
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
@@ -35,12 +41,6 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-}
-
-:root {
-  --logo-h: 65px;
-  --logo-bp: -4px;
-  --blue: #0F8EFF;
 }
 
 .gnb-logo {
@@ -144,6 +144,14 @@ footer {
   background-color: #f4f4f4;
 }
 
+.main-container {
+  width: 1200px;
+}
+.item-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
 .item-title {
   height: 500px;
   font-size: 24px;
@@ -177,4 +185,247 @@ footer {
 }
 .sample img {
   border-radius: 5px;
+}
+
+.item-result {
+  width: 498px;
+  height: 498px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  border: 1px dashed #0F8EFF;
+}
+.item-image {
+  position: relative;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 250px 250px;
+  grid-template-rows: 50px 60px 1fr 100px;
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+  background: #19202c url("./images/app1_sample.webp") no-repeat center center / cover;
+}
+.item-image::before {
+  content: "";
+  display: block;
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+}
+#app2 .item-image {
+  background-image: url("./images/app2_sample.webp");
+}
+.file-wrap  {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.file-wrap input {
+  display: none;
+}
+.btn {
+  position: relative;
+  display: block;
+  width: 120px;
+  height: 40px;
+  line-height: 40px;
+  margin: auto;
+  padding: 0 16px;
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  background-color: var(--blue);
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  z-index: 2;
+}
+.btn:hover {
+  background-color: #fff;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
+  transform: translateY(-2px);
+  color: var(--blue);
+}
+.btn.btn-dark {
+  color: white;
+  background-color: #19202c;
+}
+input[type="date"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  position: relative;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  color: transparent;
+  cursor: pointer;
+}
+.input-wrap {
+  display: flex;
+  align-items: center;
+}
+.input-wrap label {
+  display: none;
+}
+.input-wrap input::-webkit-input-placeholder {
+  font-size: 13px;
+}
+.input-wrap input::-moz-placeholder {
+  font-size: 13px;
+}
+.input-wrap input:-ms-input-placeholder {
+  font-size: 13px;
+}
+.input-wrap input::-ms-input-placeholder {
+  font-size: 13px;
+}
+.input-wrap input::placeholder {
+  font-size: 13px;
+}
+.input-wrap input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.input-wrap input:focus::-moz-placeholder {
+  color: transparent;
+}
+.input-wrap input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+.input-wrap input:focus::-ms-input-placeholder {
+  color: transparent;
+}
+.input-wrap input:focus::placeholder {
+  color: transparent;
+}
+.input-wrap input {
+  display: inline-block;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  margin-left: 10px;
+  padding: 0;
+  width: 80%;
+  height: 30px;
+  border: 1px solid var(--blue);
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  outline: none;
+  z-index: 2;
+}
+
+i.result-temp-bg {
+  display: block;
+  width: 500px;
+  height: 500px;
+  background: url(./images/output-bg.svg) no-repeat center;
+}
+
+.selected-image {
+  grid-row: 1/3;
+  grid-column: 1/5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+.selected-image img {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  transition: transform 0.2s ease;
+}
+.selected-image-position {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+.selected-image-position span {
+  padding: 5px 8px;
+  border-radius: 100px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 13px;
+  z-index: 2;
+  display: none;
+}
+.selected-image-position .selected-image-position-reset {
+  top: 270px;
+  left: 230px;
+  background-color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
+
+.clearBtn {
+  margin-left: -10px;
+  font-size: 8px;
+  width: 20px;
+  height: 20px;
+  color: white;
+  background: var(--blue);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 2;
+}
+.btn-wrap {
+  width: 500px;
+  margin: 20px auto;
+}
+.result-wrap {
+  max-width: 500px;
+  margin: auto;
+  text-align: center;
+}
+
+.image-container canvas {
+  width: 100%;
+}
+.result-wrap .download a {
+  margin: 17px auto;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #19202c;
+  border-bottom: 1px solid rgba(25, 32, 44, 0.7);
+  border-bottom-right-radius: 23px;
+}
+.result-wrap .download a p {
+  font-size: 14px;
+  margin: 0;
+}
+.result-wrap .download a p span {
+  font-family: "S-CoreDream-3Light", sans-serif;
+  font-size: 11px;
+  color: grey;
+  margin-right: 20px;
+}
+.result-wrap .download a .btn {
+  margin: 0;
 }
