feat: app3 Bicycle Repair Shop 템플릿 추가

--- a/css/app1.css
+++ b/css/app1.css
@@ -52,6 +52,9 @@
 #app1 .input-wrap input {
   font-family: "S-CoreDream-6Bold", sans-serif;
 }
+#app1 .input-wrap input::placeholder {
+  color: rgb(255 255 255 / 0.5);
+}
 #url,
 #city,
 #country {
