--- a/css/sub.css
+++ b/css/sub.css
@@ -1,4 +1,6 @@
-#app2 .item-image {
+/* app2 */
+#app2 .item-image,
+#app3 .item-image {
   display: block;
 }
 #app2 .item-image .input-wrap {
@@ -15,18 +17,59 @@
   font-family: 'Bodoni Moda', cursive;
   color: rgb(237, 244, 79, 0.3);
 }
-#app2 .item-image .input-wrap input:focus::placeholder {
-  opacity: 0;
-}
 #app2 .item-image .input-wrap.color {
   padding: 0;
   margin-top: -20px;
 }
-#app2 .item-image .input-wrap.color label {
+#app2 .item-image .input-wrap.color label,
+#app3 .item-image .input-wrap.color label {
   display: block;
   z-index: 1;
 }
-#app2 .item-image .input-wrap.color input#app2TitleColor {
+#app2 .item-image .input-wrap.color input#app2TitleColor,
+#app3 .item-image .input-wrap input#app3TitleColor {
   width: 27px;
   height: 30px;
+}
+
+/* app3 */
+#app3 .item-image .input-wrap {
+  justify-content: center;
+  align-items: center;
+}
+#app3 .item-image .input-wrap.color {
+  padding-top: 160px;
+}
+#app3 .item-image .input-wrap input#app3Title {
+  height: 90px;
+}
+#app3 .item-image .input-wrap input#app3Title,
+#app3 .item-image .input-wrap input#app3Title::placeholder {
+  font-size: 68px;
+  position: relative;
+  top: 5px;
+  font-family: 'Bodoni Moda', cursive;
+  color: rgb(251, 240, 125);
+}
+#app3 .item-image .input-wrap input#app3Title::placeholder {
+  color: rgb(251, 240, 125, 0.5);
+}
+#app3 .item-image .input-wrap input#app3Sub {
+  color: rgba(255, 255, 255, 0.9);
+}
+#app3 .item-image .input-wrap input#app3Sub,
+#app3 .item-image .input-wrap input#app3Sub::placeholder {
+  margin-top: 10px;
+  font-size: 19px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  letter-spacing: 5px;
+  color: rgba(255, 255, 255, 0.5);
+}
+#app3 .file-wrap label {
+  margin: 250px auto 0;
+}
+#app3 .selected-image-position {
+  justify-content: flex-start;
+  padding-top: 20px;
 }
