fix: 터치 y값 오류 수정 및 디자인 수정

--- a/css/sub.css
+++ b/css/sub.css
@@ -10,11 +10,15 @@
 #app2 .item-image .input-wrap input {
   height: 70px;
 }
+#app2 .item-image .input-wrap input#app2Title,
 #app2 .item-image .input-wrap input::placeholder {
   font-size: 42px;
   position: relative;
   top: 5px;
   font-family: 'Bodoni Moda', cursive;
+  color: rgb(237, 244, 79);
+}
+#app2 .item-image .input-wrap input::placeholder {
   color: rgb(237, 244, 79, 0.3);
 }
 #app2 .item-image .input-wrap.color {
