--- a/css/common.css
+++ b/css/common.css
@@ -29,9 +29,9 @@ body {
 }
 
 .main-container {
+  max-width: 1200px;
   flex: 1 0 calc(100vh - 370px);
 }
-
 .gnb-wrap {
   max-width: 1200px;
   margin: 30px auto;
@@ -145,13 +145,17 @@ footer {
   background-color: #f4f4f4;
 }
 
-.main-container {
-  width: 1200px;
-}
 .item-wrap {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 50px;
+  gap: 25px;
+  opacity: 0;
+  transform: translateY(30px);
+}
+.item-wrap.loaded {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 1s ease;
 }
 .item-title {
   height: 500px;
@@ -189,6 +193,7 @@ footer {
 }
 
 .item-result {
+  display: none;
   width: 498px;
   height: 498px;
   background-color: #f7f7f7;
@@ -214,6 +219,7 @@ footer {
   position: absolute;
   top: 0;
   left: 0;
+  border-radius: 5px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
