feat: about 페이지 추가

--- a/css/common.css
+++ b/css/common.css
@@ -145,6 +145,10 @@ footer {
   background-color: #f4f4f4;
 }
 
+address {
+  text-align: center;
+}
+
 .item-wrap {
   display: flex;
   margin-bottom: 50px;
