--- a/css/sub.css
+++ b/css/sub.css
@@ -356,3 +356,65 @@
 #app9 .selected-image-position {
   top: 200px;
 }
+
+/* app10 */
+#app10 .item-image {
+  position: relative;
+  background-color: #FFFBD8;
+  background-image: none;
+}
+#app10 .item-image .bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+#app10 .item-image .bg i {
+  position: relative;
+  display: block;
+  background-color: rgba(0, 117, 255, 0.1);
+  width: 500px;
+  height: 1px;
+  top: 40px;
+  left: 0;
+  margin-top: 30px;
+}
+#app10 .item-image .bg i.long {
+  position: absolute;
+  display: inline-block;
+  background-color: rgba(255, 0, 0, 0.1);
+  width: 1px;
+  height: 500px;
+  top: 0;
+  left: 22px;
+  margin-top: 0;
+}
+#app10 .item-image .bg i.long2 {
+  left: 25px;
+}
+#app10 .item-image .input-wrap {
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 30px;
+}
+#app10 .item-image .input-wrap.color {
+  color: #fff;
+  padding-top: 20px;
+}
+#app10 .item-image .input-wrap input#app10Title {
+  width: 36%;
+  height: 100px;
+  margin-left: 0;
+}
+#app10 .item-image .input-wrap input#app10Title,
+#app10 .item-image .input-wrap input#app10Title::placeholder {
+  font-size: 60px;
+  position: relative;
+  font-family: "Stalemate", sans-serif;
+  color: rgb(255, 255, 255);
+}
+#app10 .item-image .input-wrap input#app10Title::placeholder {
+  color: rgb(255, 255, 255, 0.5);
+}
